<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/my2"
    tools:context="com.example.a93202.wareho.SelectActivity">

    <Button
        android:id="@+id/product"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="toSelect"
        android:text="@string/product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/customer"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="toSelect"
        android:text="@string/client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/supplier"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:onClick="toSelect"
        android:text="@string/supplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/manager"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:onClick="toSelect"
        android:text="@string/pro_manager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/show"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:onClick="toSelect"
        android:text="@string/show"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/update"
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:onClick="toUpdate"
        android:text="修改用户密码"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
